<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_comentario_nuevo"
        android:id="@+id/txtCrear"
        />

    <EditText
        android:textColorHint="@color/colorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nombreInsertar"
        android:id="@+id/editNombre"
        android:ems="10"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editComentario"
        android:layout_weight="0.34"
        android:hint="@string/comentario"
        android:textColorHint="@color/colorHint"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnCrear"
        android:text="@string/crear"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione_un_comentario"
        android:id="@+id/txtSeleccionar"
        android:textAlignment="center"
        />

    <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/spinComentarios" />

    <Button
        android:text="@string/ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnVer" />

    <TextView
        android:text="@string/ver_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtVisualizar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtComentario"
        android:layout_weight="0.41" />

    <Button
        android:text="@string/eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEliminar" />



</LinearLayout>